# LNPBO

./: .gitattributes  .gitignore  LICENSE  Makefile  NOTEBOOK.md  README.md  __init__.py  benchmark.py  mkdocs.yml  pipeline.py  pyproject.toml  requirements.txt  runtime_paths.py
.github/workflows/: ci.yml
benchmark_results/: clean_count_mfp_pca_n500_s123.json  clean_count_mfp_pca_n500_s2024.json  clean_count_mfp_pca_n500_s42.json  clean_count_mfp_pca_n500_s456.json  clean_count_mfp_pca_n500_s789.json  clean_lantern_batch6_n500_s123.json  clean_lantern_batch6_n500_s2024.json  clean_lantern_batch6_n500_s42.json  clean_lantern_batch6_n500_s456.json  clean_lantern_batch6_n500_s789.json  clean_lantern_il_only_n500_s123.json  clean_lantern_il_only_n500_s2024.json  clean_lantern_il_only_n500_s42.json  clean_lantern_il_only_n500_s456.json  clean_lantern_il_only_n500_s789.json  clean_lantern_pca_n500_s123.json  clean_lantern_pca_n500_s2024.json  clean_lantern_pca_n500_s42.json  clean_lantern_pca_n500_s456.json  clean_lantern_pca_n500_s789.json  clean_lantern_unimol_batch6_n500_s123.json  clean_lantern_unimol_batch6_n500_s2024.json  clean_lantern_unimol_batch6_n500_s42.json  clean_lantern_unimol_batch6_n500_s456.json  clean_lantern_unimol_batch6_n500_s789.json  clean_lantern_unimol_pca_n500_s123.json  clean_lantern_unimol_pca_n500_s2024.json  clean_lantern_unimol_pca_n500_s42.json  clean_lantern_unimol_pca_n500_s456.json  clean_lantern_unimol_pca_n500_s789.json  clean_mordred_pca20_n500_s123.json  clean_mordred_pca20_n500_s2024.json  clean_mordred_pca20_n500_s42.json  clean_mordred_pca20_n500_s456.json  clean_mordred_pca20_n500_s789.json  clean_prospective_pls_n1000_s123.json  clean_prospective_pls_n1000_s2024.json  clean_prospective_pls_n1000_s42.json  clean_prospective_pls_n1000_s456.json  clean_prospective_pls_n1000_s789.json  (+52 more)
benchmarks/: README.md  __init__.py  __main__.py  _discrete_common.py  _gp_bo_common.py  _gp_common.py  _optimizer_runner.py  _runner_config.py  _runner_conformal.py  _runner_data.py  _runner_history.py  _runner_logging.py  analyze_bo_vs_pr.py  analyze_diversity.py  analyze_study_predictors.py  analyze_tsbatch.py  analyze_within_study.py  backfill_per_round_recall.py  benchmark.py  comprehensive_benchmark.py  constants.py  continuous_bo_benchmark.py  feature_importance.py  figures.py  gap_analysis.py  gibbon_analysis.py  hyperparam_sensitivity.py  noise_sensitivity.py  pc_interpretation.py  result_loading.py  runner.py  runner_gp.py  shap_importance.py  stats.py  strategy_registry.py  study_split_benchmark.py  substudy_sensitivity.py  threshold_sensitivity.py  within_assay_benchmark.json  within_assay_benchmark.py
benchmarks/baselines/: _agile_finetune_helper.py  agile_baseline.py  agile_predictor.py  comet_baseline.py  comet_infer.py  comet_run_all.py  (+9 more)
cli/: README.md  __init__.py  _il_propose.py  _pool.py  checkpoint.py  encode.py  main.py  propose_ils.py  register.py  suggest.py
data/: README.md  __init__.py  cache_utils.py  compositional.py  compute_pcs.py  context.py  dataset.py  generate_AGILE_embeddings.py  generate_LiON_fingerprints.py  generate_agile_loader.py  generate_chemeleon_embeddings.py  generate_mordred_descriptors.py  generate_morgan_fingerprints.py  generate_rdkit_descriptors.py  generate_unimol_embeddings.py  lnpdb_bridge.py  study_metadata.csv  study_utils.py
diagnostics/: README.md  __init__.py  anchor_analysis.json  anchor_analysis.py  anchor_pairwise_metrics.json  compute_icc.py  icc_results.json  icp_feature_selection.py  icp_results.json  partial_r2.json  partial_r2.py  permutation_decomposition.json  permutation_decomposition.py  scaffold_analysis.py  scaffold_results.json  stratified_benchmark.json  stratified_benchmark.py  study_audit.py  study_split_benchmark.json  utility_consistency.json  utility_consistency.py  utils.py
docs/: index.md  surrogates.md
experiments/: CATALOG.md  README.md  calibration_analysis.py  cross_study_transfer.py  run_ablation.py
models/: README.md  bradley_terry.py  bradley_terry_results.json  conformal_results.json  conformal_surrogate.py  context_conditioned.py  context_conditioned_results.json  data.py  deep_ensemble.py  dkl_surrogate.py  eval_multicomp_multiseed.py  eval_multiseed.py  eval_tuned_multiseed.py  featurize.py  fsbo_results.json  fsbo_surrogate.py  gp_surrogate.py  gp_surrogate_results.json  gps_mpnn.py  groupdro.py  groupdro_results.json  groupdro_surrogate.py  kernel_comparison.py  laplace.py  laplace_surrogate.py  maml_results.json  maml_surrogate.py  mpnn.py  multitask_gp.py  multitask_gp_results.json  predict.py  product_kernel_gp.py  product_kernel_results.json  robust_gp.py  robust_gp_results.json  scoped_context_model.py  scoped_context_results.json  sngp.py  sngp_surrogate.py  splits.py  (+12 more)
optimization/: README.md  __init__.py  _casmopolitan_core.py  _casmopolitan_kernels.py  _gp_batch.py  _gp_device.py  _gp_fit.py  _logging.py  _normalize.py  _ordering.py  acquisition.py  bayesopt.py  casmopolitan.py  discrete.py  doe.py  gp_bo.py  kernels.py  online_conformal.py  optimizer.py  rf_kernel.py  serialization.py  surrogate.py
paper/: figure_style.py  gen_fig_kernel_comparison.py  gen_fig_mixed_bo.py  gen_fig_toc_graphic.py  make_all_figures.py
preprocessing/: scaling.py
scripts/: README.md  analyze_kappa_optimal.py  benchmark_heldout.py  rerun_invalidated.sh  run_parallel.sh  shap_analysis.py
space/: README.md  __init__.py  constraints.py  formulation.py  parameters.py
tests/: conftest.py  test_acquisition.py  test_botorch_numerical_parity.py  test_casmopolitan.py  test_compositional_kernel.py  test_context.py  test_deep_ensemble.py  test_entrypoints.py  test_fsbo_exact.py  test_fsbo_surrogate.py  test_gp_bo.py  test_gps_mpnn.py  test_laplace_manual.py  test_mpnn.py  test_online_conformal_exact.py  test_online_conformal_runner.py  test_optimizer.py  test_optimizer_e2e.py  test_optimizer_runner_parity.py  test_partial_resume.py  test_rf_kernel.py  test_rf_kernel_batching.py  test_serialization.py  test_stats.py  test_tanimoto.py
utils/: __init__.py  ordering.py
(+94 files in other folders)
