[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LNPBO"
version = "0.1.0"
description = "Bayesian Optimization for LNP Formulation Design"
requires-python = ">=3.14"
dependencies = [
    "bayesian-optimization>=3.2",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "numpy>=2.4",
    "pandas>=3.0",
    "joblib>=1.5",
    "xgboost>=3.2",
    "mapie>=1.3",
    "rdkit>=2025.9",
    "selfies>=2.1",
    "shap>=0.51",
    "matplotlib>=3.10",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = ["ruff>=0.15"]
mordred = ["mordredcommunity>=2.0"]

[project.scripts]
lnpbo = "LNPBO.cli.main:main"

[tool.setuptools.package-dir]
LNPBO = "."

[tool.setuptools]
packages = [
    "LNPBO",
    "LNPBO.data",
    "LNPBO.cli",
    "LNPBO.optimization",
    "LNPBO.space",
    "LNPBO.utils",
    "LNPBO.benchmarks",
    "LNPBO.models",
    "LNPBO.generative",
    "LNPBO.diagnostics",
    "LNPBO.scripts",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E741",   # ambiguous variable name (l, u are standard in optimization math)
    "E402",   # module-level import not at top (notebook cells, lazy imports)
    "SIM108", # use ternary operator (readability preference)
    "B905",   # zip() without strict= (internal data, guaranteed same-length)
]

[tool.ruff.lint.isort]
known-first-party = ["LNPBO"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.14"
extra-paths = ["..", "models"]

[tool.ty.rules]
# Third-party libraries without complete type stubs (rdkit, gpytorch, xgboost)
unresolved-attribute = "warn"
possibly-missing-attribute = "ignore"
unresolved-import = "warn"
# gpytorch Tensor properties, torch.autograd.grad, numpy overloads
call-non-callable = "warn"
unsupported-operator = "warn"
no-matching-overload = "warn"
# torch Dataset __getitem__ override
invalid-method-override = "warn"
